k8s/gateway/private-gw.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: private-gateway
  namespace: default
spec:
  gatewayClassName: cilium
  infrastructure:
    annotations:
      io.cilium/lb-ipam-ips: "10.20.0.1"
  listeners:
    - name: argocd-https
      port: 443
      protocol: HTTPS
      hostname: "argocd.internal.rayq.app"
      tls:
        mode: Terminate
        certificateRefs:
          - name: argocd-tls-secret
            kind: Secret
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: argocd

    - name: hubble-https
      port: 443
      protocol: HTTPS
      hostname: "hubble.internal.rayq.app"
      tls:
        mode: Terminate
        certificateRefs:
          - name: hubble-tls-secret
            kind: Secret
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system

    - name: vault-https
      port: 443
      protocol: HTTPS
      hostname: "vault.internal.rayq.app"
      tls:
        mode: Terminate
        certificateRefs:
          - name: vault-tls-secret
            kind: Secret
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: vault

    - name: pinchflat-https
      port: 443
      protocol: HTTPS
      hostname: "pinchflat.internal.rayq.app"
      tls:
        mode: Terminate
        certificateRefs:
          - name: pinchflat-tls-secret
            kind: Secret
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: pinchflat

    - name: immich-https
      port: 443
      protocol: HTTPS
      hostname: "immich.internal.rayq.app"
      tls:
        mode: Terminate
        certificateRefs:
          - name: immich-tls-secret
            kind: Secret
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: immich
